--- a/custom_components/bin_collection/manifest.json
+++ b/custom_components/bin_collection/manifest.json
@@ -1,15 +1,16 @@
 {
     "domain": "bin_collection",
     "name": "Bin Collection",
-    "version": "0.2.0",
-    "config_flow": true,
-    "documentation": "https://developers.home-assistant.io/docs/",
     "codeowners": ["@jordanhinks"],
+    "config_flow": true,
+    "documentation": "https://github.com/jordanhinks/bin_collection",
     "integration_type": "service",
     "iot_class": "cloud_polling",
+    "quality_scale": "bronze",
+    "issue_tracker": "https://github.com/jordanhinks/bin_collection/issues",
     "requirements": [
       "beautifulsoup4>=4.9.0",
       "async-timeout>=3.0.0"
     ],
-    "quality_scale": "bronze"
+    "version": "0.2.0"
   }
