--- a/custom_components/bin_collection/manifest.json
+++ b/custom_components/bin_collection/manifest.json
@@ -3,6 +3,7 @@
     "name": "Bin Collection",
     "codeowners": ["@jordanhinks"],
     "config_flow": true,
+    "dependencies": [],
     "documentation": "https://github.com/jordanhinks/bin_collection",
     "integration_type": "service",
     "iot_class": "cloud_polling",
