--- a/custom_components/bin_collection/manifest.json
+++ b/custom_components/bin_collection/manifest.json
@@ -9,9 +9,6 @@
     "iot_class": "cloud_polling",
     "quality_scale": "bronze",
     "issue_tracker": "https://github.com/jordanhinks/bin_collection/issues",
-    "requirements": [
-      "beautifulsoup4>=4.9.0",
-      "async-timeout>=3.0.0"
-    ],
+    "requirements": ["beautifulsoup4>=4.9.0","async-timeout>=3.0.0"],
     "version": "0.2.0"
   }
