--- a/custom_components/bin_collection/manifest.json
+++ b/custom_components/bin_collection/manifest.json
@@ -1,13 +1,13 @@
 {
-    "domain": "bin_collection",
-    "name": "Bin Collection",
+    "domain": "abc_council_bin_collection",
+    "name": "ABC Council Bin Collection",
     "codeowners": ["@jordanhinks"],
     "config_flow": true,
     "dependencies": [],
-    "documentation": "https://github.com/jordanhinks/bin_collection",
+    "documentation": "https://github.com/jordanhinks/abc_council_bin_collection",
     "integration_type": "service",
     "iot_class": "cloud_polling",
-    "issue_tracker": "https://github.com/jordanhinks/bin_collection/issues",
+    "issue_tracker": "https://github.com/jordanhinks/abc_council_bin_collection/issues",
     "quality_scale": "bronze",
     "requirements": ["beautifulsoup4>=4.9.0","async-timeout>=3.0.0"],
     "version": "0.2.0"
