--- a/.github/workflows/check-files.yml
+++ b/.github/workflows/check-files.yml
@@ -4,6 +4,7 @@ on: [pull_request]
 jobs:
   validate:
     runs-on: ubuntu-latest
+    name: check-files
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
